# zarrs_opendal

./: CHANGELOG.md  Cargo.toml  README.md  justfile  makefile
.github/: codecov.yml
.github/workflows/: ci.yml  publish.yml
doc/: version_compatibility_matrix.md
src/: async.rs  lib.rs
tests/: sync.rs
