[package]
name = "zarrs_opendal"
version = "0.8.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "opendal store support for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_opendal"
repository = "https://github.com/zarrs/zarrs_opendal"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store"]
categories = ["encoding"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
opendal = { version = ">=0.54,<0.55", default-features = false }
zarrs_storage = { version = "0.4.0", features = ["async"] }

[dev-dependencies]
opendal = { version = "0.54.0", features = ["services-fs", "services-http"] }
tempfile = "3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
zarrs_storage = { version = "0.4.0", features = ["async", "tests"] }

[patch.crates-io]
zarrs_storage = { path = "../zarrs/zarrs_storage" }
